zz1/c_parser.output
State 27 conflicts: 1 shift/reduce
State 457 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: some_identifier
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 some_identifier: IDENTIFIER

   10 enumeration_constant: some_identifier

   11 string: STRING_LITERAL
   12       | FUNC_NAME

   13 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   14 generic_assoc_list: generic_association
   15                   | generic_assoc_list ',' generic_association

   16 generic_association: type_name ':' assignment_expression
   17                    | DEFAULT ':' assignment_expression

   18 postfix_expression: primary_expression
   19                   | postfix_expression '[' expression ']'
   20                   | postfix_expression '(' ')'
   21                   | postfix_expression '(' argument_expression_list ')'
   22                   | postfix_expression '.' IDENTIFIER
   23                   | postfix_expression PTR_OP IDENTIFIER
   24                   | postfix_expression INC_OP
   25                   | postfix_expression DEC_OP
   26                   | '(' type_name ')' '{' initializer_list '}'
   27                   | '(' type_name ')' '{' initializer_list ',' '}'

   28 argument_expression_list: assignment_expression
   29                         | argument_expression_list ',' assignment_expression

   30 unary_expression: postfix_expression
   31                 | INC_OP unary_expression
   32                 | DEC_OP unary_expression
   33                 | unary_operator cast_expression
   34                 | SIZEOF unary_expression
   35                 | SIZEOF '(' type_name ')'
   36                 | ALIGNOF '(' type_name ')'

   37 unary_operator: '&'
   38               | '*'
   39               | '+'
   40               | '-'
   41               | '~'
   42               | '!'

   43 cast_expression: unary_expression
   44                | '(' type_name ')' cast_expression

   45 multiplicative_expression: cast_expression
   46                          | multiplicative_expression '*' cast_expression
   47                          | multiplicative_expression '/' cast_expression
   48                          | multiplicative_expression '%' cast_expression

   49 additive_expression: multiplicative_expression
   50                    | additive_expression '+' multiplicative_expression
   51                    | additive_expression '-' multiplicative_expression

   52 shift_expression: additive_expression
   53                 | shift_expression LEFT_OP additive_expression
   54                 | shift_expression RIGHT_OP additive_expression

   55 relational_expression: shift_expression
   56                      | relational_expression '<' shift_expression
   57                      | relational_expression '>' shift_expression
   58                      | relational_expression LE_OP shift_expression
   59                      | relational_expression GE_OP shift_expression

   60 equality_expression: relational_expression
   61                    | equality_expression EQ_OP relational_expression
   62                    | equality_expression NE_OP relational_expression

   63 and_expression: equality_expression
   64               | and_expression '&' equality_expression

   65 exclusive_or_expression: and_expression
   66                        | exclusive_or_expression '^' and_expression

   67 inclusive_or_expression: exclusive_or_expression
   68                        | inclusive_or_expression '|' exclusive_or_expression

   69 logical_and_expression: inclusive_or_expression
   70                       | logical_and_expression AND_OP inclusive_or_expression

   71 logical_or_expression: logical_and_expression
   72                      | logical_or_expression OR_OP logical_and_expression

   73 conditional_expression: logical_or_expression
   74                       | logical_or_expression '?' expression ':' conditional_expression

   75 assignment_expression: conditional_expression
   76                      | unary_expression assignment_operator assignment_expression

   77 assignment_operator: JUST_ASSIGN
   78                    | MUL_ASSIGN
   79                    | DIV_ASSIGN
   80                    | MOD_ASSIGN
   81                    | ADD_ASSIGN
   82                    | SUB_ASSIGN
   83                    | LEFT_ASSIGN
   84                    | RIGHT_ASSIGN
   85                    | AND_ASSIGN
   86                    | XOR_ASSIGN
   87                    | OR_ASSIGN

   88 expression: assignment_expression
   89           | expression ',' assignment_expression

   90 constant_expression: conditional_expression

   91 declaration: declaration_specifiers ';'
   92            | declaration_specifiers init_declarator_list ';'
   93            | static_assert_declaration

   94 declaration_specifiers: storage_class_specifier declaration_specifiers
   95                       | storage_class_specifier
   96                       | type_specifier declaration_specifiers
   97                       | type_specifier
   98                       | type_qualifier declaration_specifiers
   99                       | type_qualifier
  100                       | function_specifier declaration_specifiers
  101                       | function_specifier
  102                       | alignment_specifier declaration_specifiers
  103                       | alignment_specifier

  104 init_declarator_list: init_declarator
  105                     | init_declarator_list ',' init_declarator

  106 init_declarator: declarator JUST_ASSIGN initializer
  107                | declarator

  108 storage_class_specifier: TYPEDEF
  109                        | EXTERN
  110                        | STATIC
  111                        | THREAD_LOCAL
  112                        | AUTO
  113                        | REGISTER

  114 type_specifier: VOID
  115               | CHAR
  116               | SHORT
  117               | INT
  118               | LONG
  119               | FLOAT
  120               | DOUBLE
  121               | SIGNED
  122               | UNSIGNED
  123               | BOOL
  124               | COMPLEX
  125               | IMAGINARY
  126               | atomic_type_specifier
  127               | struct_or_union_specifier
  128               | enum_specifier
  129               | TYPEDEF_NAME

  130 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  132                          | struct_or_union IDENTIFIER

  133 struct_or_union: STRUCT
  134                | UNION

  135 struct_declaration_list: struct_declaration
  136                        | struct_declaration_list struct_declaration

  137 struct_declaration: specifier_qualifier_list ';'
  138                   | specifier_qualifier_list struct_declarator_list ';'
  139                   | static_assert_declaration

  140 specifier_qualifier_list: type_specifier specifier_qualifier_list
  141                         | type_specifier
  142                         | type_qualifier specifier_qualifier_list
  143                         | type_qualifier

  144 struct_declarator_list: struct_declarator
  145                       | struct_declarator_list ',' struct_declarator

  146 struct_declarator: ':' constant_expression
  147                  | declarator ':' constant_expression
  148                  | declarator

  149 enum_specifier: ENUM '{' enumerator_list '}'
  150               | ENUM '{' enumerator_list ',' '}'
  151               | ENUM IDENTIFIER '{' enumerator_list '}'
  152               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  153               | ENUM IDENTIFIER

  154 enumerator_list: enumerator
  155                | enumerator_list ',' enumerator

  156 enumerator: enumeration_constant JUST_ASSIGN constant_expression
  157           | enumeration_constant

  158 atomic_type_specifier: ATOMIC '(' type_name ')'

  159 type_qualifier: CONST
  160               | RESTRICT
  161               | VOLATILE
  162               | ATOMIC

  163 function_specifier: INLINE
  164                   | NORETURN

  165 alignment_specifier: ALIGNAS '(' type_name ')'
  166                    | ALIGNAS '(' constant_expression ')'

  167 declarator: pointer direct_declarator
  168           | direct_declarator

  169 direct_declarator: some_identifier
  170                  | '(' declarator ')'
  171                  | direct_declarator '[' ']'
  172                  | direct_declarator '[' '*' ']'
  173                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  174                  | direct_declarator '[' STATIC assignment_expression ']'
  175                  | direct_declarator '[' type_qualifier_list '*' ']'
  176                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  177                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  178                  | direct_declarator '[' type_qualifier_list ']'
  179                  | direct_declarator '[' assignment_expression ']'
  180                  | direct_declarator '(' parameter_type_list ')'
  181                  | direct_declarator '(' ')'
  182                  | direct_declarator '(' identifier_list ')'

  183 pointer: '*' type_qualifier_list pointer
  184        | '*' type_qualifier_list
  185        | '*' pointer
  186        | '*'

  187 type_qualifier_list: type_qualifier
  188                    | type_qualifier_list type_qualifier

  189 parameter_type_list: parameter_list ',' ELLIPSIS
  190                    | parameter_list

  191 parameter_list: parameter_declaration
  192               | parameter_list ',' parameter_declaration

  193 parameter_declaration: declaration_specifiers declarator
  194                      | declaration_specifiers abstract_declarator
  195                      | declaration_specifiers

  196 identifier_list: IDENTIFIER
  197                | identifier_list ',' IDENTIFIER

  198 type_name: specifier_qualifier_list abstract_declarator
  199          | specifier_qualifier_list

  200 abstract_declarator: pointer direct_abstract_declarator
  201                    | pointer
  202                    | direct_abstract_declarator

  203 direct_abstract_declarator: '(' abstract_declarator ')'
  204                           | '[' ']'
  205                           | '[' '*' ']'
  206                           | '[' STATIC type_qualifier_list assignment_expression ']'
  207                           | '[' STATIC assignment_expression ']'
  208                           | '[' type_qualifier_list STATIC assignment_expression ']'
  209                           | '[' type_qualifier_list assignment_expression ']'
  210                           | '[' type_qualifier_list ']'
  211                           | '[' assignment_expression ']'
  212                           | direct_abstract_declarator '[' ']'
  213                           | direct_abstract_declarator '[' '*' ']'
  214                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  215                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  216                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  217                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  218                           | direct_abstract_declarator '[' type_qualifier_list ']'
  219                           | direct_abstract_declarator '[' assignment_expression ']'
  220                           | '(' ')'
  221                           | '(' parameter_type_list ')'
  222                           | direct_abstract_declarator '(' ')'
  223                           | direct_abstract_declarator '(' parameter_type_list ')'

  224 initializer: '{' initializer_list '}'
  225            | '{' initializer_list ',' '}'
  226            | assignment_expression

  227 initializer_list: designation initializer
  228                 | initializer
  229                 | initializer_list ',' designation initializer
  230                 | initializer_list ',' initializer

  231 designation: designator_list JUST_ASSIGN

  232 designator_list: designator
  233                | designator_list designator

  234 designator: '[' constant_expression ']'
  235           | '.' IDENTIFIER

  236 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  237 statement: labeled_statement
  238          | compound_statement
  239          | expression_statement
  240          | selection_statement
  241          | iteration_statement
  242          | jump_statement

  243 labeled_statement: IDENTIFIER ':' statement
  244                  | CASE constant_expression ':' statement
  245                  | DEFAULT ':' statement

  246 compound_statement: '{' '}'
  247                   | '{' block_item_list '}'

  248 block_item_list: block_item
  249                | block_item_list block_item

  250 block_item: declaration
  251           | statement

  252 expression_statement: ';'
  253                     | expression ';'

  254 selection_statement: IF '(' expression ')' statement ELSE statement
  255                    | IF '(' expression ')' statement
  256                    | SWITCH '(' expression ')' statement

  257 iteration_statement: WHILE '(' expression ')' statement
  258                    | DO statement WHILE '(' expression ')' ';'
  259                    | FOR '(' expression_statement expression_statement ')' statement
  260                    | FOR '(' expression_statement expression_statement expression ')' statement
  261                    | FOR '(' declaration expression_statement ')' statement
  262                    | FOR '(' declaration expression_statement expression ')' statement

  263 jump_statement: GOTO IDENTIFIER ';'
  264               | CONTINUE ';'
  265               | BREAK ';'
  266               | RETURN ';'
  267               | RETURN expression ';'

  268 translation_unit: external_declaration
  269                 | translation_unit external_declaration

  270 external_declaration: function_definition
  271                     | declaration

  272 function_definition: declaration_specifiers declarator declaration_list compound_statement
  273                    | declaration_specifiers declarator compound_statement

  274 declaration_list: declaration
  275                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 42
    '%' (37) 48
    '&' (38) 37 64
    '(' (40) 4 13 20 21 26 27 35 36 44 158 165 166 170 180 181 182 203 220 221 222 223 236 254 255 256 257 258 259 260 261 262
    ')' (41) 4 13 20 21 26 27 35 36 44 158 165 166 170 180 181 182 203 220 221 222 223 236 254 255 256 257 258 259 260 261 262
    '*' (42) 38 46 172 175 183 184 185 186 205 213
    '+' (43) 39 50
    ',' (44) 13 15 27 29 89 105 145 150 152 155 189 192 197 225 229 230 236
    '-' (45) 40 51
    '.' (46) 22 235
    '/' (47) 47
    ':' (58) 16 17 74 146 147 243 244 245
    ';' (59) 91 92 137 138 236 252 253 258 263 264 265 266 267
    '<' (60) 56
    '>' (62) 57
    '?' (63) 74
    '[' (91) 19 171 172 173 174 175 176 177 178 179 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 234
    ']' (93) 19 171 172 173 174 175 176 177 178 179 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 234
    '^' (94) 66
    '{' (123) 26 27 130 131 149 150 151 152 224 225 246 247
    '|' (124) 68
    '}' (125) 26 27 130 131 149 150 151 152 224 225 246 247
    '~' (126) 41
    error (256)
    IDENTIFIER <strval> (258) 9 22 23 131 132 151 152 153 196 197 235 243 263
    STRING_LITERAL <strval> (259) 11 236
    I_CONSTANT <intval> (260) 6
    F_CONSTANT <floatval> (261) 7
    FUNC_NAME <strval> (262) 12
    SIZEOF <intval> (263) 34 35
    STRUCT <intval> (264) 133
    UNION <intval> (265) 134
    PTR_OP <intval> (266) 23
    INC_OP <intval> (267) 24 31
    DEC_OP <intval> (268) 25 32
    LEFT_OP <intval> (269) 53
    RIGHT_OP <intval> (270) 54
    LE_OP <intval> (271) 58
    GE_OP <intval> (272) 59
    EQ_OP <intval> (273) 61
    NE_OP <intval> (274) 62
    AND_OP <intval> (275) 70
    OR_OP <intval> (276) 72
    MUL_ASSIGN <intval> (277) 78
    DIV_ASSIGN <intval> (278) 79
    MOD_ASSIGN <intval> (279) 80
    ADD_ASSIGN <intval> (280) 81
    SUB_ASSIGN <intval> (281) 82
    LEFT_ASSIGN <intval> (282) 83
    RIGHT_ASSIGN <intval> (283) 84
    AND_ASSIGN <intval> (284) 85
    XOR_ASSIGN <intval> (285) 86
    OR_ASSIGN <intval> (286) 87
    JUST_ASSIGN <intval> (287) 77 106 156 231
    TYPEDEF_NAME <intval> (288) 129
    ENUMERATION_CONSTANT <intval> (289) 8
    TYPEDEF <intval> (290) 108
    EXTERN <intval> (291) 109
    STATIC <intval> (292) 110 173 174 176 206 207 208 214 215 217
    AUTO <intval> (293) 112
    REGISTER <intval> (294) 113
    INLINE <intval> (295) 163
    CONST <intval> (296) 159
    RESTRICT <intval> (297) 160
    VOLATILE <intval> (298) 161
    BOOL <intval> (299) 123
    CHAR <intval> (300) 115
    SHORT <intval> (301) 116
    INT <intval> (302) 117
    LONG <intval> (303) 118
    SIGNED <intval> (304) 121
    UNSIGNED <intval> (305) 122
    FLOAT <intval> (306) 119
    DOUBLE <intval> (307) 120
    VOID <intval> (308) 114
    COMPLEX <intval> (309) 124
    IMAGINARY <intval> (310) 125
    ENUM <intval> (311) 149 150 151 152 153
    ELLIPSIS <intval> (312) 189
    CASE <intval> (313) 244
    DEFAULT <intval> (314) 17 245
    IF <intval> (315) 254 255
    ELSE <intval> (316) 254
    SWITCH <intval> (317) 256
    WHILE <intval> (318) 257 258
    DO <intval> (319) 258
    FOR <intval> (320) 259 260 261 262
    GOTO <intval> (321) 263
    CONTINUE <intval> (322) 264
    BREAK <intval> (323) 265
    RETURN <intval> (324) 266 267
    ALIGNAS <intval> (325) 165 166
    ALIGNOF <intval> (326) 36
    ATOMIC <intval> (327) 158 162
    GENERIC <intval> (328) 13
    NORETURN <intval> (329) 164
    STATIC_ASSERT <intval> (330) 236
    THREAD_LOCAL <intval> (331) 111


Nonterminals, with rules where they appear

    $accept (100)
        on left: 0
    primary_expression <tree> (101)
        on left: 1 2 3 4 5
        on right: 18
    constant <tree> (102)
        on left: 6 7 8
        on right: 2
    some_identifier <tree> (103)
        on left: 9
        on right: 1 10 169
    enumeration_constant (104)
        on left: 10
        on right: 156 157
    string <tree> (105)
        on left: 11 12
        on right: 3
    generic_selection <tree> (106)
        on left: 13
        on right: 5
    generic_assoc_list (107)
        on left: 14 15
        on right: 13 15
    generic_association (108)
        on left: 16 17
        on right: 14 15
    postfix_expression <tree> (109)
        on left: 18 19 20 21 22 23 24 25 26 27
        on right: 19 20 21 22 23 24 25 30
    argument_expression_list <list> (110)
        on left: 28 29
        on right: 21 29
    unary_expression <tree> (111)
        on left: 30 31 32 33 34 35 36
        on right: 31 32 34 43 76
    unary_operator (112)
        on left: 37 38 39 40 41 42
        on right: 33
    cast_expression <tree> (113)
        on left: 43 44
        on right: 33 44 45 46 47 48
    multiplicative_expression <tree> (114)
        on left: 45 46 47 48
        on right: 46 47 48 49 50 51
    additive_expression <tree> (115)
        on left: 49 50 51
        on right: 50 51 52 53 54
    shift_expression <tree> (116)
        on left: 52 53 54
        on right: 53 54 55 56 57 58 59
    relational_expression <tree> (117)
        on left: 55 56 57 58 59
        on right: 56 57 58 59 60 61 62
    equality_expression <tree> (118)
        on left: 60 61 62
        on right: 61 62 63 64
    and_expression <tree> (119)
        on left: 63 64
        on right: 64 65 66
    exclusive_or_expression <tree> (120)
        on left: 65 66
        on right: 66 67 68
    inclusive_or_expression <tree> (121)
        on left: 67 68
        on right: 68 69 70
    logical_and_expression <tree> (122)
        on left: 69 70
        on right: 70 71 72
    logical_or_expression <tree> (123)
        on left: 71 72
        on right: 72 73 74
    conditional_expression <tree> (124)
        on left: 73 74
        on right: 74 75 90
    assignment_expression <tree> (125)
        on left: 75 76
        on right: 13 16 17 28 29 76 88 89 173 174 176 177 179 206 207 208 209 211 214 215 216 217 219 226
    assignment_operator <intval> (126)
        on left: 77 78 79 80 81 82 83 84 85 86 87
        on right: 76
    expression <tree> (127)
        on left: 88 89
        on right: 4 19 74 89 253 254 255 256 257 258 260 262 267
    constant_expression <tree> (128)
        on left: 90
        on right: 146 147 156 166 234 236 244
    declaration <tree> (129)
        on left: 91 92 93
        on right: 250 261 262 271 274 275
    declaration_specifiers <list> (130)
        on left: 94 95 96 97 98 99 100 101 102 103
        on right: 91 92 94 96 98 100 102 193 194 195 272 273
    init_declarator_list <list> (131)
        on left: 104 105
        on right: 92 105
    init_declarator <tree> (132)
        on left: 106 107
        on right: 104 105
    storage_class_specifier <intval> (133)
        on left: 108 109 110 111 112 113
        on right: 94 95
    type_specifier <tree> (134)
        on left: 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
        on right: 96 97 140 141
    struct_or_union_specifier <tree> (135)
        on left: 130 131 132
        on right: 127
    struct_or_union <intval> (136)
        on left: 133 134
        on right: 130 131 132
    struct_declaration_list <list> (137)
        on left: 135 136
        on right: 130 131 136
    struct_declaration <tree> (138)
        on left: 137 138 139
        on right: 135 136
    specifier_qualifier_list (139)
        on left: 140 141 142 143
        on right: 137 138 140 142 198 199
    struct_declarator_list <list> (140)
        on left: 144 145
        on right: 138 145
    struct_declarator <tree> (141)
        on left: 146 147 148
        on right: 144 145
    enum_specifier <tree> (142)
        on left: 149 150 151 152 153
        on right: 128
    enumerator_list (143)
        on left: 154 155
        on right: 149 150 151 152 155
    enumerator (144)
        on left: 156 157
        on right: 154 155
    atomic_type_specifier <tree> (145)
        on left: 158
        on right: 126
    type_qualifier <intval> (146)
        on left: 159 160 161 162
        on right: 98 99 142 143 187 188
    function_specifier <intval> (147)
        on left: 163 164
        on right: 100 101
    alignment_specifier <tree> (148)
        on left: 165 166
        on right: 102 103
    declarator <tree> (149)
        on left: 167 168
        on right: 106 107 147 148 170 193 272 273
    direct_declarator <tree> (150)
        on left: 169 170 171 172 173 174 175 176 177 178 179 180 181 182
        on right: 167 168 171 172 173 174 175 176 177 178 179 180 181 182
    pointer <tree> (151)
        on left: 183 184 185 186
        on right: 167 183 185 200 201
    type_qualifier_list (152)
        on left: 187 188
        on right: 173 175 176 177 178 183 184 188 206 208 209 210 214 216 217 218
    parameter_type_list <list> (153)
        on left: 189 190
        on right: 180 221 223
    parameter_list <list> (154)
        on left: 191 192
        on right: 189 190 192
    parameter_declaration <tree> (155)
        on left: 193 194 195
        on right: 191 192
    identifier_list (156)
        on left: 196 197
        on right: 182 197
    type_name <tree> (157)
        on left: 198 199
        on right: 16 26 27 35 36 44 158 165
    abstract_declarator <tree> (158)
        on left: 200 201 202
        on right: 194 198 203
    direct_abstract_declarator (159)
        on left: 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223
        on right: 200 202 212 213 214 215 216 217 218 219 222 223
    initializer (160)
        on left: 224 225 226
        on right: 106 227 228 229 230
    initializer_list (161)
        on left: 227 228 229 230
        on right: 26 27 224 225 229 230
    designation (162)
        on left: 231
        on right: 227 229
    designator_list (163)
        on left: 232 233
        on right: 231 233
    designator (164)
        on left: 234 235
        on right: 232 233
    static_assert_declaration <tree> (165)
        on left: 236
        on right: 93 139
    statement <tree> (166)
        on left: 237 238 239 240 241 242
        on right: 243 244 245 251 254 255 256 257 258 259 260 261 262
    labeled_statement <tree> (167)
        on left: 243 244 245
        on right: 237
    compound_statement <tree> (168)
        on left: 246 247
        on right: 238 272 273
    block_item_list <list> (169)
        on left: 248 249
        on right: 247 249
    block_item <tree> (170)
        on left: 250 251
        on right: 248 249
    expression_statement <tree> (171)
        on left: 252 253
        on right: 239 259 260 261 262
    selection_statement <tree> (172)
        on left: 254 255 256
        on right: 240
    iteration_statement <tree> (173)
        on left: 257 258 259 260 261 262
        on right: 241
    jump_statement <tree> (174)
        on left: 263 264 265 266 267
        on right: 242
    translation_unit <list> (175)
        on left: 268 269
        on right: 0 269
    external_declaration <tree> (176)
        on left: 270 271
        on right: 268 269
    function_definition <tree> (177)
        on left: 272 273
        on right: 270
    declaration_list (178)
        on left: 274 275
        on right: 272 275


State 0

    0 $accept: . translation_unit $end
   91 declaration: . declaration_specifiers ';'
   92            | . declaration_specifiers init_declarator_list ';'
   93            | . static_assert_declaration
   94 declaration_specifiers: . storage_class_specifier declaration_specifiers
   95                       | . storage_class_specifier
   96                       | . type_specifier declaration_specifiers
   97                       | . type_specifier
   98                       | . type_qualifier declaration_specifiers
   99                       | . type_qualifier
  100                       | . function_specifier declaration_specifiers
  101                       | . function_specifier
  102                       | . alignment_specifier declaration_specifiers
  103                       | . alignment_specifier
  108 storage_class_specifier: . TYPEDEF
  109                        | . EXTERN
  110                        | . STATIC
  111                        | . THREAD_LOCAL
  112                        | . AUTO
  113                        | . REGISTER
  114 type_specifier: . VOID
  115               | . CHAR
  116               | . SHORT
  117               | . INT
  118               | . LONG
  119               | . FLOAT
  120               | . DOUBLE
  121               | . SIGNED
  122               | . UNSIGNED
  123               | . BOOL
  124               | . COMPLEX
  125               | . IMAGINARY
  126               | . atomic_type_specifier
  127               | . struct_or_union_specifier
  128               | . enum_specifier
  129               | . TYPEDEF_NAME
  130 struct_or_union_specifier: . struct_or_union '{' struct_declaration_list '}'
  131                          | . struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  132                          | . struct_or_union IDENTIFIER
  133 struct_or_union: . STRUCT
  134                | . UNION
  149 enum_specifier: . ENUM '{' enumerator_list '}'
  150               | . ENUM '{' enumerator_list ',' '}'
  151               | . ENUM IDENTIFIER '{' enumerator_list '}'
  152               | . ENUM IDENTIFIER '{' enumerator_list ',' '}'
  153               | . ENUM IDENTIFIER
  158 atomic_type_specifier: . ATOMIC '(' type_name ')'
  159 type_qualifier: . CONST
  160               | . RESTRICT
  161               | . VOLATILE
  162               | . ATOMIC
  163 function_specifier: . INLINE
  164                   | . NORETURN
  165 alignment_specifier: . ALIGNAS '(' type_name ')'
  166                    | . ALIGNAS '(' constant_expression ')'
  236 static_assert_declaration: . STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'
  268 translation_unit: . external_declaration
  269                 | . translation_unit external_declaration
  270 external_declaration: . function_definition
  271                     | . declaration
  272 function_definition: . declaration_specifiers declarator declaration_list compound_statement
  273                    | . declaration_specifiers declarator compound_statement

    STRUCT         shift, and go to state 1
    UNION          shift, and go to state 2
    TYPEDEF_NAME   shift, and go to state 3
    TYPEDEF        shift, and go to state 4
    EXTERN         shift, and go to state 5
    STATIC         shift, and go to state 6
    AUTO           shift, and go to state 7
    REGISTER       shift, and go to state 8
    INLINE         shift, and go to state 9
    CONST          shift, and go to state 10
    RESTRICT       shift, and go to state 11
    VOLATILE       shift, and go to state 12
    BOOL           shift, and go to state 13
    CHAR           shift, and go to state 14
    SHORT          shift, and go to state 15
    INT            shift, and go to state 16
    LONG           shift, and go to state 17
    SIGNED         shift, and go to state 18
    UNSIGNED       shift, and go to state 19
    FLOAT          shift, and go to state 20
    DOUBLE         shift, and go to state 21
    VOID           shift, and go to state 22
    COMPLEX        shift, and go to state 23
    IMAGINARY      shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  133 struct_or_union: STRUCT .

    $default  reduce using rule 133 (struct_or_union)


State 2

  134 struct_or_union: UNION .

    $default  reduce using rule 134 (struct_or_union)


State 3

  129 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 129 (type_specifier)


State 4

  108 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 108 (storage_class_specifier)


State 5

  109 storage_class_specifier: EXTERN .

    $default  reduce using rule 109 (storage_class_specifier)


State 6

  110 storage_class_specifier: STATIC .

    $default  reduce using rule 110 (storage_class_specifier)


State 7

  112 storage_class_specifier: AUTO .

    $default  reduce using rule 112 (storage_class_specifier)


State 8

  113 storage_class_specifier: REGISTER .

    $default  reduce using rule 113 (storage_class_specifier)


State 9

  163 function_specifier: INLINE .

    $default  reduce using rule 163 (function_specifier)


State 10

  159 type_qualifier: CONST .

    $default  reduce using rule 159 (type_qualifier)


State 11

  160 type_qualifier: RESTRICT .

    $default  reduce using rule 160 (type_qualifier)


State 12

  161 type_qualifier: VOLATILE .

    $default  reduce using rule 161 (type_qualifier)


State 13

  123 type_specifier: BOOL .

    $default  reduce using rule 123 (type_specifier)


State 14

  115 type_specifier: CHAR .

    $default  reduce using rule 115 (type_specifier)


State 15

  116 type_specifier: SHORT .

    $default  reduce using rule 116 (type_specifier)


State 16

  117 type_specifier: INT .

    $default  reduce using rule 117 (type_specifier)


State 17

  118 type_specifier: LONG .

    $default  reduce using rule 118 (type_specifier)


State 18

  121 type_specifier: SIGNED .

    $default  reduce using rule 121 (type_specifier)


State 19

  122 type_specifier: UNSIGNED .

    $default  reduce using rule 122 (type_specifier)


State 20

  119 type_specifier: FLOAT .

    $default  reduce using rule 119 (type_specifier)


State 21

  120 type_specifier: DOUBLE .

    $default  reduce using rule 120 (type_specifier)


State 22

  114 type_specifier: VOID .

    $default  reduce using rule 114 (type_specifier)


State 23

  124 type_specifier: COMPLEX .

    $default  reduce using rule 124 (type_specifier)


State 24

  125 type_specifier: IMAGINARY .

    $default  reduce using rule 125 (type_specifier)


State 25

  149 enum_specifier: ENUM . '{' enumerator_list '}'
  150               | ENUM . '{' enumerator_list ',' '}'
  151               | ENUM . IDENTIFIER '{' enumerator_list '}'
  152               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  153               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  165 alignment_specifier: ALIGNAS . '(' type_name ')'
  166                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  158 atomic_type_specifier: ATOMIC . '(' type_name ')'
  162 type_qualifier: ATOMIC .  [IDENTIFIER, STRUCT, UNION, TYPEDEF_NAME, TYPEDEF, EXTERN, STATIC, AUTO, REGISTER, INLINE, CONST, RESTRICT, VOLATILE, BOOL, CHAR, SHORT, INT, LONG, SIGNED, UNSIGNED, FLOAT, DOUBLE, VOID, COMPLEX, IMAGINARY, ENUM, ALIGNAS, ATOMIC, NORETURN, THREAD_LOCAL, '(', ')', ',', ':', '[', '*', ';']

    '('  shift, and go to state 49

    '('       [reduce using rule 162 (type_qualifier)]
    $default  reduce using rule 162 (type_qualifier)

    shift/reduce conflict on token '(':
      162 type_qualifier: ATOMIC .
      158 atomic_type_specifier: ATOMIC . '(' type_name ')'
      First example: ATOMIC . '(' type_name ')' declaration_specifiers ';' $end
      Shift derivation
        $accept
        `-> 0: translation_unit                                                                                          $end
               `-> 268: external_declaration
                        `-> 271: declaration
                                 `-> 91: declaration_specifiers                                                      ';'
                                         `-> 96: type_specifier                               declaration_specifiers
                                                 `-> 126: atomic_type_specifier
                                                          `-> 158: ATOMIC . '(' type_name ')'
      Second example: ATOMIC . '(' declarator ')' declaration_list compound_statement $end
      Reduce derivation
        $accept
        `-> 0: translation_unit                                                                                                              $end
               `-> 268: external_declaration
                        `-> 270: function_definition
                                 `-> 272: declaration_specifiers    declarator                           declaration_list compound_statement
                                          `-> 99: type_qualifier    `-> 168: direct_declarator
                                                  `-> 162: ATOMIC .          `-> 170: '(' declarator ')'



State 28

  164 function_specifier: NORETURN .

    $default  reduce using rule 164 (function_specifier)


State 29

  236 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  111 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 111 (storage_class_specifier)


State 31

  271 external_declaration: declaration .

    $default  reduce using rule 271 (external_declaration)


State 32
